Agregar paginas y arreglar codigo

--- a/src/pages/usuarios/usuarios.scss
+++ b/src/pages/usuarios/usuarios.scss
@@ -1,3 +1,13 @@
 page-usuarios {
-
+	.fila {
+		color: #3a3a3a;
+		text-align: center;
+	}
+	.primer_elemento {
+		color: #3a3a3a;
+	}
+	.ultimo_elemento {
+		color: #3a3a3a;
+		text-align: center;
+	}
 }
