--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -25,10 +25,17 @@ $font-path: "../assets/fonts";
 
 $colors: (
   primary:    #387ef5,
-  secondary:  #32db64,
+  secondary:  #6ba3ff,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+
+  // Colores de los Tags
+  seguridad:	#F56363,
+  confianza:	#19D0A7,
+  conocimiento:	#A36FF7,
+  comunicacion:	#FB8F58
+  
 );
 
 
